<resources>

    <string name="app_name">PVT</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_testing_screen">Start Screen</string>
    <string name="button_start">Take Test</string>
    <string name="heading_results">Average Response Time</string>
    <string name="heading_errors">Errors</string>
    <string name="button_results">Show Results</string>
    <string name="title_activity_show_results">Results</string>
    <string name="heading_report">Report</string>
    <string name="title_activity_login">Login</string>
    <string name="label_email">Email address</string>
    <string name="label_password">Password</string>
    <string name="button_login">Log in</string>
    <string name="heading_existing_user_question">Existing user?</string>
    <string name="heading_new_user_question">New user?</string>
    <string name="button_create_new_account">Sign Up</string>
    <string name="invalid_login_details_message">Please enter a valid email address and password</string>
    <string name="incorrect_login_details_message">Incorrect email/password. Please try again.</string>
    <string name="could_not_process_login_details_message">There was a problem contacting our servers. Please try again.</string>
    <string name="heading_create_user">Sign Up</string>
    <string name="heading_user_details">Enter your details</string>
    <string name="label_name">Name</string>
    <string name="heading_user_password">Choose a password</string>
    <string name="label_confirm_password">Confirm password</string>
    <string name="button_confirm_signup">Sign Up</string>
    <string name="title_activity_create_user">Sign Up</string>
    <string name="invalid_signup_email_error">Please enter a valid email address</string>
    <string name="invalid_signup_name_error">Please enter your name</string>
    <string name="invalid_signup_password_error">Passwords must match and be more than 8 letters long</string>
    <string name="invalid_login_email_error">Please enter your email address</string>
    <string name="invalid_login_password_error">Please enter your password</string>
    <string name="existing_account_error">That email address has already been used to sign up</string>
    <string name="could_not_process_signup">There was an error processing your sign up. Please try again.</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_loading">Loading…</string>
    <string name="report_summary">Your average response time was {{averageRt}}ms. You made {{errors}} error(s) and had {{lapses}} lapse(s).</string>
    <string name="report_submission_error">There was a problem submitting your results. Please try again later.</string>
    <string name="title_activity_screening_survey">ScreeningSurveyActivity</string>
    <string name="screening_header">Welcome</string>
    <string name="screening_intro">Before you take your first test we need to ask you a few personal questions. This helps us better understand you and your sleep requirements.</string>
    <string name="screener_dob_question">Date of birth</string>
    <string name="screener_gender_question">Gender</string>
    <string-array name="genders_array">
        <item>Prefer not to say</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="button_next">Next</string>

</resources>