<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/createUserHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:text="@string/heading_create_user"
        android:textAppearance="?android:attr/textAppearanceLarge" />


  	<TextView
      	android:id="@+id/userDetailsHeading"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
      	android:layout_marginTop="10dp"
      	android:text="@string/heading_user_details"
      	android:layout_below="@id/createUserHeading"
      	android:textAppearance="?android:attr/textAppearanceMedium" />
  	
    <TextView
        android:id="@+id/createAccountValidationMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignRight="@+id/userName"
        android:layout_above="@+id/userName"
        android:textColor="@color/invalid_entry"
        android:visibility="invisible" />

	<EditText
	    android:id="@+id/userName"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/userDetailsHeading"
	    android:layout_marginTop="15dp"
	    android:hint="@string/label_name"
	    android:inputType="textPersonName" />
	
	<EditText
      	android:id="@+id/userEmail"
      	android:layout_below="@+id/userName"
      	android:layout_width="fill_parent"
      	android:layout_height="wrap_content"
      	android:hint="@string/label_email"
      	android:inputType="textEmailAddress" />

  	<TextView
      	android:id="@+id/userPasswordHeading"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
      	android:layout_marginTop="10dp"
      	android:text="@string/heading_user_password"
      	android:layout_below="@id/userEmail"
      	android:textAppearance="?android:attr/textAppearanceMedium" />
  	
	<EditText
	    android:id="@+id/userPassword"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:layout_below="@id/userPasswordHeading"
	    android:hint="@string/label_password"
	    android:inputType="textPassword" />
	
	<EditText
	    android:id="@+id/userConfirmPassword"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/userPassword"
	    android:hint="@string/label_confirm_password"
	    android:inputType="textPassword" />

    <Button
        android:id="@+id/userCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userConfirmPassword"
        android:onClick="submitCreateAccountForm"
        android:text="@string/button_confirm_signup" />

</RelativeLayout>