<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/signUpHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:text="@string/heading_create_user"
        android:textAppearance="?android:attr/textAppearanceLarge" />


  	<TextView
      	android:id="@+id/signUpDetailsHeading"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
      	android:layout_marginTop="10dp"
      	android:text="@string/heading_user_details"
      	android:layout_below="@id/signUpHeading"
      	android:textAppearance="?android:attr/textAppearanceMedium" />
  	
    <TextView
        android:id="@+id/signUpResultMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signUpName"
        android:layout_alignRight="@+id/signUpName"
        android:layout_above="@+id/signUpName"
        android:textColor="@color/invalid_entry"
        android:visibility="invisible" />

	<EditText
	    android:id="@+id/signUpName"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/signUpDetailsHeading"
	    android:layout_marginTop="15dp"
	    android:hint="@string/label_name"
	    android:background="@android:drawable/edit_text"
	    android:inputType="textPersonName" />
	
	<EditText
      	android:id="@+id/signUpEmail"
      	android:layout_below="@+id/signUpName"
      	android:layout_width="fill_parent"
      	android:layout_height="wrap_content"
      	android:hint="@string/label_email"
	    android:background="@android:drawable/edit_text"
      	android:inputType="textEmailAddress" />

  	<TextView
      	android:id="@+id/signUpPasswordHeading"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
      	android:layout_marginTop="10dp"
      	android:text="@string/heading_user_password"
      	android:layout_below="@id/signUpEmail"
      	android:textAppearance="?android:attr/textAppearanceMedium" />
  	
	<EditText
	    android:id="@+id/signUpPassword"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:layout_below="@id/signUpPasswordHeading"
	    android:background="@android:drawable/edit_text"
	    android:hint="@string/label_password"
	    android:inputType="textPassword" />
	
	<EditText
	    android:id="@+id/signUpConfirmPassword"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/signUpPassword"
	    android:background="@android:drawable/edit_text"
	    android:hint="@string/label_confirm_password"
	    android:inputType="textPassword" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpConfirmPassword"
        android:onClick="submitSignUpForm"
        android:text="@string/button_confirm_signup" />

</RelativeLayout>